// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`allows user to set chart subtitle 1`] = `
Array [
  Object {
    "payload": true,
    "type": "chartEditor/setQueryChange",
  },
  Object {
    "payload": Object {
      "card": Object {
        "enabled": true,
      },
      "legend": Object {
        "alignment": "left",
        "enabled": true,
        "layout": "horizontal",
        "position": "top",
        "typography": Object {
          "fontColor": "#1D2729",
          "fontFamily": "Gangster Grotesk, Arial, Helvetica, sans-serif",
          "fontSize": 10,
          "fontStyle": "normal",
          "fontWeight": "normal",
        },
      },
      "subtitle": Object {
        "content": "CHART_SUBTITLE",
        "typography": Object {
          "fontColor": "#1D2729",
          "fontFamily": "Gangster Grotesk, Arial, Helvetica, sans-serif",
          "fontSize": 14,
          "fontStyle": "normal",
          "fontWeight": "normal",
        },
      },
      "title": Object {
        "content": "",
        "typography": Object {
          "fontColor": "#27566D",
          "fontFamily": "Gangster Grotesk, Arial, Helvetica, sans-serif",
          "fontSize": 20,
          "fontStyle": "normal",
          "fontWeight": "normal",
        },
      },
    },
    "type": "chartEditor/updateWidgetSettings",
  },
]
`;

exports[`allows user to set chart title 1`] = `
Array [
  Object {
    "payload": true,
    "type": "chartEditor/setQueryChange",
  },
  Object {
    "payload": Object {
      "card": Object {
        "enabled": true,
      },
      "legend": Object {
        "alignment": "left",
        "enabled": true,
        "layout": "horizontal",
        "position": "top",
        "typography": Object {
          "fontColor": "#1D2729",
          "fontFamily": "Gangster Grotesk, Arial, Helvetica, sans-serif",
          "fontSize": 10,
          "fontStyle": "normal",
          "fontWeight": "normal",
        },
      },
      "subtitle": Object {
        "content": "",
        "typography": Object {
          "fontColor": "#1D2729",
          "fontFamily": "Gangster Grotesk, Arial, Helvetica, sans-serif",
          "fontSize": 14,
          "fontStyle": "normal",
          "fontWeight": "normal",
        },
      },
      "title": Object {
        "content": "CHART_TITLE",
        "typography": Object {
          "fontColor": "#27566D",
          "fontFamily": "Gangster Grotesk, Arial, Helvetica, sans-serif",
          "fontSize": 20,
          "fontStyle": "normal",
          "fontWeight": "normal",
        },
      },
    },
    "type": "chartEditor/updateWidgetSettings",
  },
]
`;
